Configure OutputDebugString appender
In addition to console appender, add appender that writes to Windows debug
stream. It is very easy to listen to debug output with tools such as
Log2Console or Dbgview

--- a/App.config
+++ b/App.config
@@ -15,9 +15,16 @@
         <root>
             <level value="INFO"/> <!-- minumum level to log: ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF -->
             <appender-ref ref="ConsoleAppender"/>
+            <appender-ref ref="OutputDebugStringAppender"/>
         </root>
         
         <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline"/>
+            </layout>
+        </appender>
+
+        <appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender">
             <layout type="log4net.Layout.PatternLayout">
                 <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline"/>
             </layout>
